--- a/front-end/style.css
+++ b/front-end/style.css
@@ -1,3 +1,19 @@
+.add-block {
+  position: fixed;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  background-color: #fff;
+  border: 2px solid #032701;
+  background-color: #FCBF49;
+  border-radius: 10px;
+  padding: 10px 250px;
+  /* box-shadow: -5px 1px 10px 3px rgba(158,158,158,1);
+  -webkit-box-shadow: -5px 1px 11px 3px rgba(158,158,158,1);
+  -moz-box-shadow: -5px 1px 10px 3px rgba(158,158,158,1); */
+}
+
 .title-container {
     text-align: center;
     display: flex;
