--- a/front-end/style.css
+++ b/front-end/style.css
@@ -15,10 +15,26 @@
   -moz-box-shadow: -5px 1px 10px 3px rgba(158,158,158,1); */
 }
 
+.drop-zone {
+  margin: auto;
+  width: 100%;
+  border-radius: 10px;
+  text-align: center;
+  border: 1px dashed #000000;
+  background-color: #cccccc;
+}
+
+.drop-zone-active {
+  border: 1px dashed #1490F5;
+  background-color: #9DD1FB;
+}
 .design-side-menu {
   border: 1px solid red;
-  float: right;
-  background: #ffffff;
+  position: fixed;
+  left: 100%;
+  top: 0;
+  transform: translate(-100%, 0);
+  width: 200px;
   height: 100%;
 }
 
@@ -102,6 +118,7 @@ input {
   padding: 20px;
   -webkit-box-shadow: 0px 20px 50px -1px rgba(0,0,0,0.8); 
   box-shadow: 0px 20px 50px -1px rgba(0,0,0,0.8);
+  max-height: 80%;
 }
 
 
@@ -247,4 +264,9 @@ body {
 
 .new-block-heading-container {
   margin-bottom: 20px;
+}
+
+.design-tab {
+  display: flex;
+  border-radius: 10px;
 }
